# The-AI-Team

./: .gitignore  README.md  pyproject.toml
artifacts/: alt_technical_specification_01.txt  alt_technical_specification_02.txt  functional_requirements.txt  technical_spec_amendments.txt  technical_specification.txt
data/sample_data/: sample01.json  sample02.json  sample03.json
docs/: sawtooth_of_uncertainty.py
personas/: 02_technical_architect.txt  03_software_engineer.txt  04_qa_test_engineer.txt
prompts/: 04_qa_test_engineer.txt
src/data_analysis/: location_analysis_final.py
src/misc/: data_anonymiser.py
