[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "The-AI-Team"
version = "0.1.0"
dependencies = [
	"ruamel.yaml>=0.17",
	"pydantic>=1.10,<2.0",
	"PyYAML>=6.0",
	"pandas>=2.0",
	"numpy>=1.24",
	"openai>=1.0",
]
optional-dependencies = {}

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"pytest-mock>=3.14"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.enum"]